[package]
name = "dedup"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
kamadak-exif = "0.5.5"
log = "0.4.19"
regex = "1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
